# 2026-capstone-54

./: 404.html  README.md  _config.yml  index.md
analysis-resume/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
analysis-resume/.github/workflows/: build-production-image.yml  deploy-production.yml
analysis-resume/app/: celery_app.py  config.py  db.py
analysis-resume/app/common/: __init__.py  chunker.py  embedder.py  llm.py
analysis-resume/app/schemas/: __init__.py  parsed_data.py  resume.py  resume_embedding.py  resume_file_content.py  resume_token_usage.py
analysis-resume/app/tasks/: analyze_resume.py  embed_resume.py  extract_text.py  finalize_resume.py  process_resume.py  reembed_resume.py
analysis-resume/app/utils/: logger.py
analysis-resume/docs/: chunking-strategy.md  embedding-deduplication.md
analysis-stt/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
analysis-stt/.github/workflows/: build-production-image.yml  deploy-production.yml
analysis-stt/app/: celery_app.py  config.py
analysis-stt/app/services/: s3_downloader.py  transcriber.py
analysis-stt/app/tasks/: transcribe_audio.py
backend/: .env.sample  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TODO.md  TODO_subscription.md  docker-compose.yml  pyproject.toml  tool.sh
backend/.github/: PULL_REQUEST_TEMPLATE.md
backend/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/.github/workflows/: CI.yml  build-production-image.yml  create-coverage-report.yml  deploy-production.yml
backend/.kiro/skills/: create-django-feature.md  create-realtime-consumer.md
backend/.kiro/steering/: consumer-guidelines.md  django-conventions.md  llm-service-guidelines.md  model-guidelines.md  serializer-guidelines.md  service-guidelines.md  task-guidelines.md  test-guidelines.md  view-guidelines.md
backend/docs/: ai-code-generation-guidelines.md  debug-endpoints.md  django-channels-architecture.md  gmail-smtp-setup.md  realtime-react-integration.md  slack-setup.md  user-specific-realtime.md  websocket-sse-k3s.md
backend/docs/erd/: erd_01_job_descriptions.dot  erd_02_user_profile.dot  erd_03_resumes.dot  erd_04_streaks.dot  erd_05_achievements.dot  erd_06_ticket_subscription.dot  erd_07_terms_documents.dot  erd_08_interviews.dot  erd_09_notifications.dot  erd_full.dot
backend/docs/lesson/: django-filter-custom-validation.md  orm-n-plus-one-optimization.md  unfold-admin-actions.md  unfold-admin-autocomplete.md
backend/environments/development/: Dockerfile  Dockerfile.postgres  init-db.sh  init-db.sql  push-postgres-image.sh
backend/environments/production/: Dockerfile  build.sh
backend/webapp/: conftest.py  manage.py
backend/webapp/achievements/: apps.py  constants.py
backend/webapp/api/: apps.py  urls.py
backend/webapp/common/: apps.py  llm_client.py  logging_filters.py
backend/webapp/config/: asgi.py  celery.py  celery_sqs.py  settings.py  urls.py
backend/webapp/dashboard/: apps.py
backend/webapp/interview/: apps.py
backend/webapp/interviews/: apps.py  constants.py
backend/webapp/job_descriptions/: apps.py  signals.py  urls.py
backend/webapp/llm_trackers/: apps.py
backend/webapp/notifications/: admin.py  (+4 more)
booth-rag/: .editorconfig  .env.example  .env.server.sample  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
booth-rag/booth_rag/: __init__.py  config.py  main.py
booth-rag/infra/: 00-namespace.yaml  01-service.yaml  02-certificate.yaml  03-ingressroute-https.yaml  04-ingressroute-http.yaml  05-middleware.yaml
booth-rag/scripts/: download_embeddings.py  download_embeddings.sh  generate_qr.py  ingest_codebase.py  ingest_docs.py  reset_index.py  run_dev.sh  run_embedding_server.sh  run_embedding_servers.sh
booth-rag/tests/: test_bm25_store.py  test_code_chunker_outline.py  test_code_walker.py  test_doc_loader_docx.py  test_dual_vector_index.py  test_followups.py  test_graph_pagerank.py  test_parallel_ingest.py  test_prompt_scope.py  test_query_intent.py  test_rag_enhancements.py  test_remote_embeddings.py  test_reranker.py  test_secret_filter.py  test_structure_indexer.py  test_system_smoke.py
face-analyzer/: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  handler.py  main.py  pyproject.toml  requirements.txt  run_local.py
face-analyzer/analyzer/: __init__.py  batch_processor.py  emotion_category.py  face_detector.py  frame_analyzer.py  statistics.py
face-analyzer/local/: .env.sample  poller.py
face-analyzer/scripts/: _strip_mediapipe.py  _zipdir.py  build_layer.sh  package_code.sh
face-analyzer/tests/: test_face_analyzer_handler.py
interview-analysis-report/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  celery_app.py  config.py  demo_local.py  docker-compose.yml  pyproject.toml
interview-analysis-report/db/: connection.py  models.py
interview-analysis-report/services/: llm_analyzer.py  report_generator.py  video_analysis_aggregator.py  voice_analysis_invoker.py
interview-analysis-report/tasks/: generate_report.py
interview-analysis-report/tests/: test_video_analysis_aggregator.py
interview-analysis-report/utils/: content_loader.py  document_loader.py  token_tracker.py
mefit-tools/gui/: Dockerfile  README.md  app.py  config.py  docker-compose.gui.yml  pyproject.toml
scraping/: .dockerignore  .gitignore  Dockerfile  README.md  build_lambda.bat  build_lambda.sh  celery_app.py  config.py  docker-compose.yml  lambda_handler.py  main.py  pipeline.py  pyproject.toml  scraper.py  tasks.py
scraping/db/: connection.py
scraping/extractors/: llm_extractor.py  schema.py
scraping/plugins/: base.py  default.py  jobkorea.py  jobplanet.py  registry.py
scraping/schemas/: __init__.py  extractor.py  job_description.py  job_posting.py  pipeline.py  scraper.py
scraping/utils/: anti_bot.py  browser.py  logger.py
voice-api/: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
voice-api/app/: main.py
(+2031 files in other folders)
