[project]
name = "backend"
version = "0.1.0"
description = "backend project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-rest-auth>=7.2.0",
    "django>=6.0.3",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "django-import-export>=4.4.0",
    "django-postgres-extra>=2.0.4",
    "django-unfold>=0.85.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-camel-case>=1.4.2",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-extensions>=0.7.1",
    "drf-spectacular>=0.29.0",
    "drf-writable-nested>=0.7.2",
    "pre-commit>=4.5.1",
    "psycopg[binary]>=3.3.3",
]
