[project]
name = "backend"
version = "0.1.0"
description = "backend project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "django>=6.0.3",
    "django-celery-beat>=2.9.0",
    "django-celery-results>=2.6.0",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "django-import-export>=4.4.0",
    "django-postgres-extra>=2.0.4",
    "django-unfold>=0.85.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-camel-case>=1.4.2",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-extensions>=0.7.1",
    "drf-spectacular>=0.29.0",
    "drf-writable-nested>=0.7.2",
    "hypothesis>=6.151.9",
    "pre-commit>=4.5.1",
    "psycopg[binary]>=3.3.3",
    "redis>=7.3.0",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.42.0",
    "boto3>=1.38.0",
    "django-storages[s3]>=1.14.0",
    "django-allow-cidr>=0.8.0",
]
