[project]
name = "face-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
    "mediapipe==0.10.14",
    "numpy>=1.26,<2.0",
    "opencv-python-headless==4.10.0.84",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest", "hypothesis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["functions", "../analysis-video/layers/common/python"]
